--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ Flask==2.1.2
 gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_12c133f5-0720-4727-9c18-599a3af825723lzwham3/croots/recipe/markupsafe_1654597866058/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
+MarkupSafe
+toml
 Werkzeug==2.1.2
