--- a/static/content/about.toml
+++ b/static/content/about.toml
@@ -4,6 +4,7 @@ street = "2259 Sandalwood Dr"
 city = "Twinsburg"
 state = "Ohio"
 zipcode = "44087"
+address = "2259 Sandalwood Dr, Twinsburg, OH 44087"
 phone = "+1 (216) 554-1740"
 email = "csrubin@gmail.com"
 linked_in = "https://www.linkedin.com/in/connor-rubin-58a98b7a/"
