--- a/static/content/about.toml
+++ b/static/content/about.toml
@@ -8,4 +8,4 @@ address = "2259 Sandalwood Dr, Twinsburg, OH 44087"
 phone = "+1 (216) 554-1740"
 email = "csrubin@gmail.com"
 linked_in = "https://www.linkedin.com/in/connor-rubin-58a98b7a/"
-about_me = """This is my about me description in about.toml"""
+about_me = "ABOUT"
