--- a/static/content/about.toml
+++ b/static/content/about.toml
@@ -1,11 +1,16 @@
 name = "Connor Rubin"
 title = "Technical Product Manager"
-street = "2259 Sandalwood Dr"
-city = "Twinsburg"
-state = "Ohio"
-zipcode = "44087"
-address = "2259 Sandalwood Dr, Twinsburg, OH 44087"
+street = "603 HWY 141"
+city = "White Salmon"
+state = "Washington"
+zipcode = "98672"
+address = "603 HWY 141, White Salmon, WA 98672"
 phone = "+1 (216) 554-1740"
 email = "csrubin@gmail.com"
-linked_in = "https://www.linkedin.com/in/connor-rubin-58a98b7a/"
-about_me = "ABOUT"
+linked_in = "https://www.linkedin.com/in/connor-rubin/"
+about_me = """
+Wide-ranging experiences, passion for technology and sustainability, and a penchant for active discovery have led me to become a
+competent generalist who isn't afraid to dig into the details while maintaining focus on the bigger picture.
+I am a curious, detailed-oriented, and pragmatic worker with hopes to use my skills to
+further sustainability goals using technology.
+"""
